--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
         <title>trillo &mdash; Your all-in-one booking app</title>
     </head>
     <body>
-        TESTO bombesto
+        <div class="container">
+            <header class="header">Header Part</header>
+            <div class="content">
+                <nav class="sidebar">Navigation</nav>
+                <main class="hotel-view">
+                    
+                </main>
+            </div>
+        </div>
     </body>
 </html>
