add base layout

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="content">
                 <nav class="sidebar">Navigation</nav>
                 <main class="hotel-view">
-                    
+                    Hotel View
                 </main>
             </div>
         </div>
