--- a/index.html
+++ b/index.html
@@ -7,11 +7,21 @@
         <!-- <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel="stylesheet"> -->
         <link rel="stylesheet" href="css/style.css">
         <link rel="shortcut icon" type="image/png" href="img/favicon.png">
-        <title>trillo &mdash; Your all-in-one booking app</title>
+        <title>Flex-ible &mdash; Your all-in-one booking app</title>
     </head>
     <body>
         <div class="container">
-            <header class="header">Header Part</header>
+            <header class="header">
+                <img src="img/logo.png" alt="Flex-bile" class="header__logo">
+                <form action="#" class="header__search">
+                    <input type="text" class="header__search-input" placeholder="Search hotels">
+                    <button class="header__search-btn">
+                        <svg class="header__search-icon">
+                            <use xlink:href="img/sprite.svg#icon-magnifying-glass"></use>
+                        </svg>
+                    </button>
+                </form>
+            </header>
             <div class="content">
                 <nav class="sidebar">Navigation</nav>
                 <main class="hotel-view">
