add header markup

--- a/index.html
+++ b/index.html
@@ -21,6 +21,24 @@
                         </svg>
                     </button>
                 </form>
+                <nav class="header__nav">
+                    <div class="header__nav-icon-box">
+                        <svg class="header__nav-icon">
+                            <use xlink:href="img/sprite.svg#icon-heart"></use>
+                        </svg>
+                        <span class="header__notification">5</span>
+                    </div>
+                    <div class="header__nav-icon-box">
+                        <svg class="header__nav-icon">
+                            <use xlink:href="img/sprite.svg#icon-message-typing"></use>
+                        </svg>
+                        <span class="header__notification">11</span>
+                    </div>
+                    <div class="header__nav-user">
+                        <img src="/img/user.jpg" alt="User photo" class="header__nav-user-photo">
+                        <span class="header__nav-username">Marcus</span>
+                    </div>
+                </nav>
             </header>
             <div class="content">
                 <nav class="sidebar">Navigation</nav>
