--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <input type="text" class="header__search-input" placeholder="Search hotels">
                     <button class="header__search-btn">
                         <svg class="header__search-icon">
-                            <use xlink:href="img/sprite.svg#icon-magnifying-glass"></use>
+                            <use xlink:href="img/sprite.svg#icon-zoom"></use>
                         </svg>
                     </button>
                 </form>
