--- a/index.html
+++ b/index.html
@@ -41,7 +41,45 @@
                 </nav>
             </header>
             <div class="content">
-                <nav class="sidebar">Navigation</nav>
+                <nav class="sidebar">
+                    <ul class="sidebar__ul">
+                        <li class="sidebar__item">
+                            <a href="#" class="sidebar__link">
+                                <svg class="sidebar__icon">
+                                    <use xlink:href="img/sprite.svg#icon-home"></use>
+                                </svg>
+                                <span>Hotel</span>
+                            </a>
+                        </li>
+                        <li class="sidebar__item">
+                            <a href="#" class="sidebar__link">
+                                <svg class="sidebar__icon">
+                                    <use xlink:href="img/sprite.svg#icon-location-arrow"></use>
+                                </svg>
+                                <span>Flight</span>
+                            </a>
+                        </li>
+                        <li class="sidebar__item">
+                            <a href="#" class="sidebar__link">
+                                <svg class="sidebar__icon">
+                                    <use xlink:href="img/sprite.svg#icon-key-outline"></use>
+                                </svg>
+                                <span>Car Rental</span>
+                            </a>
+                        </li>
+                        <li class="sidebar__item">
+                            <a href="#" class="sidebar__link">
+                                <svg class="sidebar__icon">
+                                    <use xlink:href="img/sprite.svg#icon-globe-outline"></use>
+                                </svg>
+                                <span>Tours</span>
+                            </a>
+                        </li>
+                    </ul>
+                    <div class="legal">
+                        &copy; 2024 by Flex-ible. All rights reserved.
+                    </div>
+                </nav>
                 <main class="hotel-view">
                     Hotel View
                 </main>
