--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div class="content">
                 <nav class="sidebar">
                     <ul class="sidebar__ul">
-                        <li class="sidebar__item">
+                        <li class="sidebar__item sidebar__item--active">
                             <a href="#" class="sidebar__link">
                                 <svg class="sidebar__icon">
                                     <use xlink:href="img/sprite.svg#icon-home"></use>
