--- a/index.html
+++ b/index.html
@@ -95,31 +95,31 @@
                     <div class="overview">
                         <h1 class="overview__heading">Hotel Las Palmas</h1>
                         <div class="overview__stars">
-                            <svg class="overview__icon--star">
+                            <svg class="overview__icon">
                                 <use xlink:href="img/sprite.svg#icon-heart"></use>
                             </svg>
-                            <svg class="overview__icon--star">
+                            <svg class="overview__icon">
                                 <use xlink:href="img/sprite.svg#icon-heart"></use>
                             </svg>
-                            <svg class="overview__icon--star">
+                            <svg class="overview__icon">
                                 <use xlink:href="img/sprite.svg#icon-heart"></use>
                             </svg>
-                            <svg class="overview__icon--star">
+                            <svg class="overview__icon">
                                 <use xlink:href="img/sprite.svg#icon-heart"></use>
                             </svg>
-                            <svg class="overview__icon--star">
+                            <svg class="overview__icon">
                                 <use xlink:href="img/sprite.svg#icon-heart"></use>
                             </svg>
                         </div>
                         <div class="overview__location">
-                            <svg class="overview__icon--location">
+                            <svg class="overview__icon">
                                 <use xlink:href="img/sprite.svg#icon-location-outline"></use>
                             </svg>
                             <button class="btn-inline">Albufeira, Portugal</button>
-                            <div class="overview__rating">
-                                <div class="overview__rating-average">8.6</div>
-                                <div class="overview__rating-count">429 votes</div>
-                            </div>
+                        </div>
+                        <div class="overview__rating">
+                            <div class="overview__rating-average">8.6</div>
+                            <div class="overview__rating-count">429 votes</div>
                         </div>
                     </div>
                 </main>
