overview and btn styles;

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                             <svg class="overview__icon">
                                 <use xlink:href="img/sprite.svg#icon-location-outline"></use>
                             </svg>
-                            <button class="btn-inline">Albufeira, Portugal</button>
+                            <button class="btn btn--inline overview__btn">Albufeira, Portugal</button>
                         </div>
                         <div class="overview__rating">
                             <div class="overview__rating-average">8.6</div>
