--- a/index.html
+++ b/index.html
@@ -126,18 +126,18 @@
                         <div class="detail__description">
                             <p class="detail__paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non aliquid facere velit dolores esse sit beatae obcaecati consequatur culpa voluptatem.</p>
                             <p class="detail__paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit hic consequatur qui molestias, harum libero.</p>
-                            <ul class="list">
-                                <li class="list__item">Close to the beach</li>
-                                <li class="list__item">Breakfast included</li>
-                                <li class="list__item">Free airport shuttle</li>
-                                <li class="list__item">Free wifi in all rooms</li>
-                                <li class="list__item">A/C & heating</li>
-                                <li class="list__item">Pet friendly</li>
-                                <li class="list__item">Perfect for families</li>
-                                <li class="list__item">We speak many languages</li>
+                            <ul class="detail__list">
+                                <li class="detail__item">Close to the beach</li>
+                                <li class="detail__item">Breakfast included</li>
+                                <li class="detail__item">Free airport shuttle</li>
+                                <li class="detail__item">Free wifi in all rooms</li>
+                                <li class="detail__item">A/C & heating</li>
+                                <li class="detail__item">Pet friendly</li>
+                                <li class="detail__item">Perfect for families</li>
+                                <li class="detail__item">We speak many languages</li>
                             </ul>
                             <div class="detail__recommend">
-                                <p class="detail__paragraph">Lucy and 3 other friends recommend this hotel.</p>
+                                <p class="detail__paragraph--rec">Lucy and 3 other friends recommend this hotel.</p>
                                 <div class="details__rec-pictures">
                                     <img src="/img/user-3.jpg" alt="Friend 1" class="detail__small-photo">
                                     <img src="/img/user-4.jpg" alt="Friend 2" class="detail__small-photo">
