--- a/index.html
+++ b/index.html
@@ -147,7 +147,29 @@
                             </div>
                         </div>
                         <div class="detail__reviews">
-                            REV
+                            <figure class="detail__review">
+                                <blockquote class="detail__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, impedit.</blockquote>
+                                <figcaption class="detail__review-user">
+                                    <img src="/img/user-1.jpg" alt="User 1" class="detail__photo">
+                                    <div class="detail__review-box">
+                                        <p class="detail__review-user-name">Nick Smith</p>
+                                        <p class="detail__review-date">Feb 23rd, 2017</p>
+                                    </div>
+                                    <div class="detail__review-rating">7.8</div>
+                                </figcaption>
+                            </figure>
+                            <figure class="detail__review">
+                                <blockquote class="detail__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, impedit.</blockquote>
+                                <figcaption class="detail__review-user">
+                                    <img src="/img/user-2.jpg" alt="User 2" class="detail__photo">
+                                    <div class="detail__review-box">
+                                        <p class="detail__review-user-name">Jacque Wilson</p>
+                                        <p class="detail__review-date">March 11th, 2015</p>
+                                    </div>
+                                    <div class="detail__review-rating">8.4</div>
+                                </figcaption>
+                            </figure>
+                            <button class="btn btn--inline">Show all <span>&rarr;</span></button>
                         </div>
                     </div>
                 </main>
