--- a/index.html
+++ b/index.html
@@ -172,6 +172,10 @@
                             <button class="btn btn--inline">Show all <span>&rarr;</span></button>
                         </div>
                     </div>
+                    <div class="detail__cta">
+                        <h2 class="detail__book-now">Good news! We have 4 free rooms available!</h2>
+                        <button class="btn">Only 4 rooms left</button>
+                    </div>
                 </main>
             </div>
         </div>
