--- a/index.html
+++ b/index.html
@@ -174,7 +174,10 @@
                     </div>
                     <div class="detail__cta">
                         <h2 class="detail__book-now">Good news! We have 4 free rooms available!</h2>
-                        <button class="btn">Only 4 rooms left</button>
+                        <button class="detail__cta-btn">
+                            <span class="detail__cta-btn--visible">Book now</span>
+                            <span class="detail__cta-btn--hidden">Only 4 rooms left!</span>
+                        </button>
                     </div>
                 </main>
             </div>
